# tinyopt-example

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: example.cpp
